--- a/gxemul-legacy/trunk/src/cpus/Makefile.skel
+++ b/gxemul-legacy/trunk/src/cpus/Makefile.skel
@@ -1,16 +1,16 @@
 #
-#  $Id: Makefile.skel,v 1.38 2007-06-19 02:11:46 debug Exp $
+#  $Id: Makefile.skel,v 1.39 2007-06-19 04:14:59 debug Exp $
 #
 #  Makefile for GXemul src/cpus
 #
 
 CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(DINCLUDE)
 
-OBJS=$(CPU_ARCHS) $(CPU_BACKENDS)
+OBJS=cpu.o $(CPU_ARCHS) $(CPU_BACKENDS)
 TOOLS=generate_head generate_tail $(CPU_TOOLS)
 
 
-all: cpu.o $(TOOLS)
+all: $(TOOLS)
 	$(MAKE) buildobjs
 
 
