Adding GXemulWindow.cc,h.

--- a/gxemul-legacy/trunk/src/Makefile.skel
+++ b/gxemul-legacy/trunk/src/Makefile.skel
@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.104 2007-11-12 13:50:06 debug Exp $
+#  $Id: Makefile.skel,v 1.105 2007-11-12 14:51:45 debug Exp $
 #
 #  Makefile for GXemul src
 #
@@ -11,7 +11,7 @@ OBJS=emul.o emul_parse.o float_emul.o interrupt.o main.o main_gui.o \
 
 all: do_include
 	$(MAKE) do_src do_console do_cpus do_debugger do_devices do_disk \
-	    do_file do_machines do_net do_promemul do_symbol do_useremul
+	    do_file do_gui do_machines do_net do_promemul do_symbol do_useremul
 
 do_include:
 	cd include; $(MAKE); cd ..
@@ -33,6 +33,9 @@ do_disk:
 
 do_file:
 	cd file; $(MAKE); cd ..
+
+do_gui:
+	cd gui; $(MAKE); cd ..
 
 do_machines:
 	cd machines; $(MAKE); cd ..
@@ -62,6 +65,7 @@ clean:
 	cd devices; $(MAKE) clean; cd ..
 	cd disk; $(MAKE) clean; cd ..
 	cd file; $(MAKE) clean; cd ..
+	cd gui; $(MAKE) clean; cd ..
 	cd machines; $(MAKE) clean; cd ..
 	cd net; $(MAKE) clean; cd ..
 	cd promemul; $(MAKE) clean; cd ..
@@ -76,6 +80,7 @@ clean_all: clean
 	cd devices; $(MAKE) clean_all; cd ..
 	cd disk; $(MAKE) clean_all; cd ..
 	cd file; $(MAKE) clean_all; cd ..
+	cd gui; $(MAKE) clean_all; cd ..
 	cd machines; $(MAKE) clean_all; cd ..
 	cd net; $(MAKE) clean_all; cd ..
 	cd promemul; $(MAKE) clean_all; cd ..
