*** empty log message ***

--- a/gxemul-legacy/trunk/Makefile.skel
+++ b/gxemul-legacy/trunk/Makefile.skel
@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.55 2007-11-12 14:51:45 debug Exp $
+#  $Id: Makefile.skel,v 1.56 2007-11-14 09:32:17 debug Exp $
 #
 #  Makefile for GXemul
 #
@@ -18,13 +18,27 @@ build:
 	ln $(BIN) $(BINGUI)
 
 install: build
-	@echo
-	@echo "There is no automatic 'make install'. You need to manually copy the gxemul"
-	@echo "binary and any other files you need to where you want them to reside. The man/"
-	@echo "subdirectory contains a small man-page, it should probably be placed in"
-	@echo "'/usr/.../man/man1' on most systems, and the contents of the doc/ subdirectory"
-	@echo "could be placed in '/usr/.../share/doc/gxemul'."
-	@echo
+	@echo ""
+	@echo "There is no automatic 'make install'. You need to manually copy the binaries"
+	@echo "and any other files you need to where you want them to reside. Usually, that"
+	@echo "includes the following:"
+	@echo ""
+	@echo "    gxemul               the main binary"
+	@echo "    gxemul-gui           GUI binary (may be soft- or hard-linked to gxemul)"
+	@echo "    man/gxemul[-gui].1   the man pages"
+	@echo "    doc/                 documentation"
+	@echo ""
+	@echo "Note that apart from the binary (or binaries), no other files are really"
+	@echo "necessary for gxemul to work. The man page and documentation are optional."
+	@echo ""
+	@echo "E.g. on FreeBSD, recommended locations for the files are:"
+	@echo ""
+	@echo "    /usr/local/bin/gxemul[-gui]"
+	@echo "    /usr/local/man/man1/gxemul[-gui].1"
+	@echo "    /usr/local/share/doc/gxemul/"
+	@echo ""
+	@echo "However, this may vary from one operating system to another."
+	@echo ""
 
 clean:
 	rm -f $(BIN) $(BINGUI) *core core.* *.gmon _* *.exe ktrace.out
