--- a/gxemul-legacy/trunk/src/main/Makefile.skel
+++ b/gxemul-legacy/trunk/src/main/Makefile.skel
@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.2 2007-11-24 02:00:05 debug Exp $
+#  $Id: Makefile.skel,v 1.3 2007-11-24 02:02:17 debug Exp $
 #
 #  Makefile for GXemul src/main
 #
@@ -16,7 +16,7 @@ all: $(OBJS)
 $(OBJS): Makefile
 
 test:
-	$(CXX) $(CFLAGS) $(LIBS) -DTEST ConfigNode.cc -o _test
+	@$(CXX) $(CFLAGS) $(LIBS) -DTEST ConfigNode.cc -o _test
 	@./_test
 	@rm -f _test
 
