--- a/gxemul-legacy/trunk/Makefile.skel
+++ b/gxemul-legacy/trunk/Makefile.skel
@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.59 2007-11-24 02:00:04 debug Exp $
+#  $Id: Makefile.skel,v 1.60 2007-11-24 10:04:29 debug Exp $
 #
 #  Makefile for GXemul
 #
@@ -14,8 +14,7 @@ all: build
 build:
 	cd src; $(MAKE); cd ..
 	$(CXX) $(COPTIM) src/console/*.o src/cpus/*.o src/debugger/*.o src/devices/*.o src/disk/*.o src/file/*.o src/machines/*.o src/main/*.o src/net/*.o src/promemul/*.o src/symbol/*.o src/useremul/*.o src/gui/*.o $(LIBS) -o $(BIN)
-	rm -f $(BINGUI)
-	ln $(BIN) $(BINGUI)
+	ln -f $(BIN) $(BINGUI)
 
 test:
 	cd src; $(MAKE) test; cd ..
@@ -25,17 +24,19 @@ test:
 install: build test
 	@echo
 	@echo Installing binaries...
-	@echo
 	mkdir -p $(PREFIX)/bin
 	cp -f $(BIN) $(PREFIX)/bin/
-	ln $(PREFIX)/bin/$(BIN) $(PREFIX)/bin/$(BINGUI)
+	ln -f $(PREFIX)/bin/$(BIN) $(PREFIX)/bin/$(BINGUI)
+	@echo
 	@echo Installing man pages...
 	mkdir -p $(PREFIX)/man/man1
 	cp -f man/gxemul.1 $(PREFIX)/man/man1/
-	ln $(PREFIX)/man/man1/gxemul.1 $(PREFIX)/man/man1/gxemul-gui.1
+	ln -f $(PREFIX)/man/man1/gxemul.1 $(PREFIX)/man/man1/gxemul-gui.1
+	@echo
 	@echo Installing documentation...
 	mkdir -p $(PREFIX)/share/doc/gxemul
 	cp -R doc/* $(PREFIX)/share/doc/gxemul/
+	@echo
 	@echo "Done!"
 
 uninstall:
