--- a/gxemul-legacy/trunk/src/Makefile.skel
+++ b/gxemul-legacy/trunk/src/Makefile.skel
@@ -1,97 +1,25 @@
 #
-#  $Id: Makefile.skel,v 1.111 2007-11-24 02:00:05 debug Exp $
+#  $Id: Makefile.skel,v 1.112 2007-12-13 12:30:09 debug Exp $
 #
 #  Makefile for GXemul src
 #
 
 CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(INCLUDE)
 
-all: do_include
-	$(MAKE) do_src do_console do_cpus do_debugger do_devices do_disk \
-	    do_file do_gui do_machines do_main do_net do_promemul do_symbol do_useremul
-
-
-test: do_include
-	cd main; $(MAKE) test; cd ..
-
-
-do_include:
-	cd include; $(MAKE); cd ..
-
-do_console:
-	cd console; $(MAKE); cd ..
-
-do_cpus:
-	cd cpus; $(MAKE); cd ..
-
-do_debugger:
-	cd debugger; $(MAKE); cd ..
-
-do_devices:
-	cd devices; $(MAKE); cd ..
-
-do_disk:
-	cd disk; $(MAKE); cd ..
-
-do_file:
-	cd file; $(MAKE); cd ..
+all: do_gui do_main
 
 do_gui:
 	cd gui; $(MAKE); cd ..
 
-do_machines:
-	cd machines; $(MAKE); cd ..
-
 do_main:
 	cd main; $(MAKE); cd ..
 
-do_net:
-	cd net; $(MAKE); cd ..
-
-do_promemul:
-	cd promemul; $(MAKE); cd ..
-
-do_symbol:
-	cd symbol; $(MAKE); cd ..
-
-do_useremul:
-	cd useremul; $(MAKE); cd ..
-
-do_src: $(OBJS)
-
-$(OBJS): Makefile
-
 clean:
-	rm -f $(OBJS) *core tmp_*.c
-	cd include; $(MAKE) clean; cd ..
-	cd console; $(MAKE) clean; cd ..
-	cd cpus; $(MAKE) clean; cd ..
-	cd debugger; $(MAKE) clean; cd ..
-	cd devices; $(MAKE) clean; cd ..
-	cd disk; $(MAKE) clean; cd ..
-	cd file; $(MAKE) clean; cd ..
 	cd gui; $(MAKE) clean; cd ..
-	cd machines; $(MAKE) clean; cd ..
 	cd main; $(MAKE) clean; cd ..
-	cd net; $(MAKE) clean; cd ..
-	cd promemul; $(MAKE) clean; cd ..
-	cd symbol; $(MAKE) clean; cd ..
-	cd useremul; $(MAKE) clean; cd ..
 
 clean_all: clean
-	cd include; $(MAKE) clean_all; cd ..
-	cd console; $(MAKE) clean_all; cd ..
-	cd cpus; $(MAKE) clean_all; cd ..
-	cd debugger; $(MAKE) clean_all; cd ..
-	cd devices; $(MAKE) clean_all; cd ..
-	cd disk; $(MAKE) clean_all; cd ..
-	cd file; $(MAKE) clean_all; cd ..
 	cd gui; $(MAKE) clean_all; cd ..
-	cd machines; $(MAKE) clean_all; cd ..
 	cd main; $(MAKE) clean_all; cd ..
-	cd net; $(MAKE) clean_all; cd ..
-	cd promemul; $(MAKE) clean_all; cd ..
-	cd symbol; $(MAKE) clean_all; cd ..
-	cd useremul; $(MAKE) clean_all; cd ..
 	rm -f Makefile
 
