--- a/gxemul-legacy/trunk/src/main/Makefile.skel
+++ b/gxemul-legacy/trunk/src/main/Makefile.skel
@@ -1,14 +1,13 @@
 #
-#  $Id: Makefile.skel,v 1.5 2007-12-13 12:30:09 debug Exp $
+#  $Id: Makefile.skel,v 1.6 2007-12-13 23:22:05 debug Exp $
 #
 #  Makefile for GXemul src/main
 #
 
-CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(DINCLUDE)
+CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(INCLUDE)
 LIBS=$(XLIB) $(OTHERLIBS)
 
-OBJS=ConfigNode.o debug_new.o \
-	GXemul.o TTYDebugConsole.o
+OBJS=Component.o ConfigNode.o debug_new.o GXemul.o TTYDebugConsole.o
 
 all: $(OBJS)
 
