--- a/gxemul-legacy/trunk/src/components/Makefile.skel
+++ b/gxemul-legacy/trunk/src/components/Makefile.skel
@@ -1,10 +1,10 @@
 #
-#  $Id: Makefile.skel,v 1.1 2007-12-13 23:22:05 debug Exp $
+#  $Id: Makefile.skel,v 1.2 2007-12-18 14:07:52 debug Exp $
 #
 #  Makefile for GXemul src/components
 #
 
-CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(INCLUDE)
+CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(INCLUDE1)
 
 all: do_dummy
 
