--- a/gxemul-legacy/trunk/src/main/Makefile.skel
+++ b/gxemul-legacy/trunk/src/main/Makefile.skel
@@ -1,10 +1,10 @@
 #
-#  $Id: Makefile.skel,v 1.7 2007-12-17 23:19:04 debug Exp $
+#  $Id: Makefile.skel,v 1.8 2007-12-18 14:07:52 debug Exp $
 #
 #  Makefile for GXemul src/main
 #
 
-CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(INCLUDE)
+CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(INCLUDE1)
 LIBS=$(XLIB) $(OTHERLIBS)
 
 OBJS=Action.o ActionStack.o Component.o ConfigNode.o \
