20071227        Adding StateVariable and StateVariableValue classes; writing                 unit tests, etc.                 The ActionStack now uses lists instead of vectors, for the                 undo and redo stack. (For O(1) undo/redo operations.)                 Continuing on the Component infrastructure: parent/child                 relationships, state variables, and serialization.                 Adding a simple Checksum class; useful as a helper for unit                 tests. 20071228        Implementing a CreateComponent function, which when given a                 "component class name" creates a Component.                 Adding a simple EscapedString helper class, for generating and                 decoding C-style escaped strings.                 Simple deserialization works. :)

--- a/gxemul-legacy/trunk/Makefile.skel
+++ b/gxemul-legacy/trunk/Makefile.skel
@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.66 2007-12-17 23:19:03 debug Exp $
+#  $Id: Makefile.skel,v 1.67 2007-12-28 19:08:43 debug Exp $
 #
 #  Makefile for GXemul
 #
@@ -23,7 +23,7 @@ test: build
 documentation:
 	$(DOXYGEN) doc/Doxyfile
 
-install: build test documentation
+install: test documentation
 	@echo
 	@echo Installing binaries...
 	mkdir -p $(PREFIX)/bin
