--- a/gxemul-legacy/trunk/src/Makefile.skel
+++ b/gxemul-legacy/trunk/src/Makefile.skel
@@ -1,30 +1,30 @@
 #
-#  $Id: Makefile.skel,v 1.113 2007-12-13 23:22:05 debug Exp $
+#  $Id: Makefile.skel,v 1.114 2007-12-31 11:50:18 debug Exp $
 #
 #  Makefile for GXemul src
 #
 
 CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(INCLUDE)
 
-all: do_components do_gui do_main
+all: do_components do_ui do_main
 
 do_components:
 	cd components; $(MAKE); cd ..
 
-do_gui:
-	cd gui; $(MAKE); cd ..
+do_ui:
+	cd ui; $(MAKE); cd ..
 
 do_main:
 	cd main; $(MAKE); cd ..
 
 clean:
 	cd components; $(MAKE) clean; cd ..
-	cd gui; $(MAKE) clean; cd ..
+	cd ui; $(MAKE) clean; cd ..
 	cd main; $(MAKE) clean; cd ..
 
 clean_all: clean
 	cd components; $(MAKE) clean_all; cd ..
-	cd gui; $(MAKE) clean_all; cd ..
+	cd ui; $(MAKE) clean_all; cd ..
 	cd main; $(MAKE) clean_all; cd ..
 	rm -f Makefile
 
