--- a/gxemul-legacy/trunk/src/main/Makefile.skel
+++ b/gxemul-legacy/trunk/src/main/Makefile.skel
@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.11 2007-12-29 16:18:51 debug Exp $
+#  $Id: Makefile.skel,v 1.12 2008-01-02 10:56:41 debug Exp $
 #
 #  Makefile for GXemul src/main
 #
@@ -8,17 +8,22 @@ CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(INCLUDE1)
 LIBS=$(XLIB) $(OTHERLIBS)
 
 OBJS=Action.o ActionStack.o Checksum.o \
-	CommandInterpreter.o Component.o \
+	Command.o CommandInterpreter.o Component.o \
 	debug_new.o EscapedString.o GXemul.o \
 	StateVariable.o StateVariableValue.o UnitTest.o
 
-all: $(OBJS)
+all: $(OBJS) do_commands
 
 $(OBJS): Makefile
 
+do_commands:
+	cd commands; $(MAKE); cd ..
+
 clean:
+	cd commands; $(MAKE) clean; cd ..
 	rm -f $(OBJS) *core _test
 
 clean_all: clean
+	cd commands; $(MAKE) clean_all; cd ..
 	rm -f Makefile
 
